--- a/35.연산자.html
+++ b/35.연산자.html
@@ -58,4 +58,4 @@
 </html>
 
 <!-- 35~36라인에서 btn을 클릭했을 때, plus의 텍스트가 80(50+20)으로 바뀌는 소스입니다.
-  ㅇ 45~46라인에서 btn2를 클릭했을 때, minus의 텍스트가 30(50-20)으로 바뀌는 소스입니다. -->
+     45~46라인에서 btn2를 클릭했을 때, minus의 텍스트가 30(50-20)으로 바뀌는 소스입니다. -->
